Update Argo CD application configuration and README

--- a/clusters/clusters-registrations-application.yaml
+++ b/clusters/clusters-registrations-application.yaml
@@ -11,7 +11,7 @@ spec:
     path: clusters
     kustomize:
       commonLabels:
-        managed-by: argocd
+        app.kubernetes.io/managed-by: argocd
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
